  
<?xml version="1.0"?>
<package>
  <name>octopus_telemetry</name>
  <version>1.0.0</version>
  <description>The octopus_telemetry package</description>

  <maintainer email="camille.sauvain.1@etsmtl.net">camille</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sonia_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sonia_common</run_depend>

</package>